Pass target entities to derived command source stacks